fix cowbird overlap. closes #76

--- a/less/app.less
+++ b/less/app.less
@@ -365,7 +365,7 @@ header {
         h2 { background-image: url('../img/title-melissa.png'); }
     }
     #cowbird-grid {
-        position: relative;
+        position: static;
         z-index: 194;
         background-color: #222;
 
